# oonalysis

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  metrics.md  oonalysis.cbp  oonalysis.uml
include/: Ctx.h  SrcFile.h  filetype.h  oonalysis.h  strutils.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  Ctx.cc  cli_main.cc  cpreprocessor.cc  filetype.cc  gui_main.cc  main.cc  oonalysis.h
src/cli/: CMakeLists.txt  cli.cpp  cli.h  help.cpp  help.h  list.cpp  list.h  parse.cc  parse.h
src/core/: CMakeLists.txt  Ctx.cc  Ctx.h  OOProg.h  SrcFile.h  SrcObj.h  clang.cc  clang.h  cpreprocessor.cc  cpreprocessor.h  filetype.cc  filetype.h  ghc.cc  parse.cc  parse.h  run.cc  srcfile.cc  strutils.cc  strutils.h
src/core/clang/: CMakeLists.txt  _test.cpp  clang.cc  clang.h  cursor_dispatch.cc  cursor_dispatch.h  handlers.cc  handlers.h  util.cpp  util.hpp
src/core/common/: CMakeLists.txt  _test.cc  loc.cc  loc.h
src/db/: CMakeLists.txt  add.c  add.cc  cppinclusion.cc  cppinclusion.h  db.cpp  db.h  dbrecord.h  dbrepo.h  dbtypes.h  delete.cc  file.cc  file.h  functiondecl.cc  functiondecl.h  get.c  get.cc  init.c  init.cc  init.h  io.c  io.cc  io.h  io.hh  types.h  update.cc
src/db/repo/: CMakeLists.txt  add.cc  delete.cc  get.cc  repo.h  types.h  update.cc
src/graph/: CMakeLists.txt  ForceDirectedGraph.cpp  ForceDirectedGraph.hpp  Graph.cpp  Graph.hpp  PlainEdge.cpp  PlainEdge.hpp  PlainNode.cpp  PlainNode.hpp  callgraph.cpp  callgraph.h  edge.h  field.cc  field.h  force.cc  force.h  inclgraph.cpp  inclgraph.h  layout.cc  layout.h  node.cc  node.h  point.cc  point.h
src/gui/: Arrow.cpp  Arrow.hpp  CMakeLists.txt  FileNode.cpp  FileNode.hpp  FileTree.cpp  FileTree.h  GraphDisplayRegion.cpp  GraphDisplayRegion.hpp  MainToolbar.cc  MainWindow.cc  OOProject.hpp  ProjectCreationWizard.cpp  ProjectCreationWizard.hpp  WebInterface.cpp  WebInterface.hpp  WebSocketClientWrapper.cpp  WebSocketClientWrapper.hpp  WebSocketTransport.cpp  WebSocketTransport.hpp  WebState.hpp  canvas.cc  canvas.h  context.h  ctx.cc  ctx.h  declfilenode.h  filenode.h  graphview.cpp  graphview.h  gui.h  guicontroller.cc  guicontroller.h  guinode.h  guinodes.cc  guinodes.h  implfilenode.h  index.html  mainframe.cc  mainframe.h  (+14 more)
src/gui/web/: index.html  index.js  qwebchannel.js
src/metrics/: CMakeLists.txt  cppinclusions.cc  cppinclusions.h  files.cc  files.h  loc.cc  loc.h  metrics.cc  metrics.h
src/parse/: OOProg.h  srcfile.cc  strutils.cc
src/util/: CMakeLists.txt  compilation.cpp  compilation.hpp  files.cc  files.h  log.c  log.h  project.cc  project.h  strutils.cc  strutils.h
